# Surveillance-System

./: .gitmodules  README.md
Camera/src/Software_Camera_Control/: Makefile
Camera/src/Software_Camera_Control/log/: log_Cam_Control.txt
Camera/src/Software_Camera_Control/src/: app_main.c
Camera/src/Software_HM_Control/: HM_Control  Makefile
Camera/src/Software_HM_Control/include/: MQTT.h  controller_led_bt.h  gpio.h  log.h
Camera/src/Software_HM_Control/include/src/: MQTT.c  Timer.c  controller_led_bt.c  gpio.c
Camera/src/Software_HM_Control/log/: log_HM_Control.txt
Camera/src/Software_HM_Control/src/: app_main.c  gpio.c
Camera/src/Software_HM_Control/src/headers/: gpio.h
Camera/src/Software_HM_Control/src/include/: controller_led_bt.h
Camera/src/Software_HM_Control/src/include/src/: controller_led_bt.c
Camera/src/libs/: MQTT.h  Timer.h
Camera/src/libs/src/: MQTT.c  log.c
Control_Panel/: CMakeLists.txt  README.md  partitions_littleFS.csv  sdkconfig  sdkconfig.old
Control_Panel/components/sntp/: CMakeLists.txt  sntp.c  sntp.h
Control_Panel/components/wifi/: CMakeLists.txt  connect.c  connect.h
Control_Panel/main/: CMakeLists.txt  MQTT.c  buttons.c  display.c  displayOled.c  displayOled_controller.c  fileSystem.c  m_key.c  main.c  packageProcessor.c  project_Timers.c
Control_Panel/main/headers/: MQTT.h  buttons.h  display.h  displayOled.h  displayOled_controller.h  fileSystem.h  general.h  m_key.h  packageProcessor.h  project_Timers.h
